--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,13 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.5",
     "cra-template": "1.2.0",
+    "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-native": "^0.79.2",
+    "react-native-config": "^1.5.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-web": "^0.20.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1"
   },
