--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "start": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -18,8 +18,5 @@
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\""
-  }
+  "description": ""
 }
