--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,6 @@
   "devDependencies": {
     "concurrently": "^9.1.2",
     "web-vitals": "^4.2.4"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
